Fix: Issue with div alignment

--- a/pages/!common.css
+++ b/pages/!common.css
@@ -1,74 +1,78 @@
-body, html {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
+body,
+html {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
 }
 
 body {
-    background-color: #465399;
+	background-color: #465399;
 }
 
-p {
-    color: white;
+p,
+h1,
+h2,
+h3 {
+	color: white;
+	font-family: "Roboto Mono", monospace;
+	margin: 0;
+	padding: 0;
+}
+
+footer {
+	width: 100%;
+	height: 275px;
+	background-color: black;
 }
 
 .navbar {
-    display: flex;
-    height: 75px;
-    width: 100%;
-    padding-left: 12px;
-    padding-bottom: 12px;
-    padding-top: 12px;
-
-    font-family: 'Roboto Mono', monospace;
-    font-size: 1.5rem;
-    border-bottom: solid white 3px;
+	display: flex;
+	height: 100%;
+	width: 100%;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	font-size: 1.5rem;
+	border-bottom: solid white 3px;
 }
 
 .navbar div {
-    display: inline-flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+	display: inline-flex;
+	position: relative;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
 }
 
-.navbar div:first-child {
-    padding-right: 12px;
+.navbar div {
+	margin: auto;
+	flex-grow: 1;
 }
 
-.navbar div:not(:first-child) {
-    margin: auto;
-    flex-grow: 1;
-    
+.navbar div::after {
+	border-bottom: 6px solid white;
+	position: absolute;
+	content: " ";
+	transition: width 0.35s ease-in-out;
+	width: 0;
+	height: 0;
+	bottom: -20px;
 }
 
-.navbar div:not(:first-child)::after {
-    border-bottom: 6px solid white;
-  position: absolute;
-  content: ' ';
-  transition: width 0.35s ease-in-out;
-  width: 0;
-  height: 0;
-  bottom: -12px;
+.navbar div:hover::after {
+	width: 100%;
 }
 
-.navbar div:not(:first-child):hover::after {
-    width: 100%;
-}
-
-.headerText{
-    padding: 0;
-    margin: 0;
-    display: block !important;
-    text-align: center;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: 600;
-    font-size: 3rem;
+.headerText {
+	padding: 0;
+	margin: 0;
+	display: block !important;
+	text-align: center;
+	font-weight: 600;
+	font-size: 3rem;
 }
 
 .spacer {
-    height: 30px;
+	height: 30px;
 }
